Fix: margin right card resto version tablette
+passage de tous les fichiers au validateur

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -597,6 +597,10 @@ body {
   border-radius: 15px 15px 0 0;
 }
 
+.no-marginR {
+  margin-right: 0;
+}
+
 .caption {
   /*mise en forme de figcaption des cards*/
   padding: 7px 10px 15px 10px;
