--- a/sass/main.scss
+++ b/sass/main.scss
@@ -198,6 +198,10 @@ body {
   }
 }
 
+.no-marginR{
+  margin-right: 0;
+}
+
 .caption {
   /*mise en forme de figcaption des cards*/
   padding: 7px 10px 15px 10px;
